[tool.poetry]
name = "nvidia-smi-exporter-python"
version = "0.1.0"
description = ""
authors = ["Henry Chen <chendaizhuo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.7.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."nvidia-smi-exporter"]
".rst" = "nvidia_smi_exporter_python.main:main"
